@@ -1,3 +1,7 @@
+4864.	[bug]		named acting as a slave for a catalog zone crashed if
+			the latter contained a master definition without an IP
+			address. [RT #45999]
+
 4863.	[bug]		Fix various other bugs reported by Valgrind's
 			memcheck tool. [RT #46978]
 
